# mono_test_project

./: README
command_server/: Makefile  command_server.sln  command_server.userprefs
command_server/command_server/: AssemblyInfo.cs  Main.cs  command_server.csproj
cpp_dbus_client/: CMakeLists.txt  cpp_dbus_client.kdev4  introspection.xml  main.cpp  runner.h
cpp_dbus_client/.kdev4/: cpp_dbus_client.kdev4
